# llvm-codegen-testing

./: CMakeLists.txt  LICENSE  README.md
scripts/: check-results.cmake  find-test-ll.py  run-test.cmake
